--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="header">
-        <h1>Pokédex Web</h1>
+        <a href=""><h1>Pokédex Web</h1></a>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Buscar Pokémon por nome/ID...">
             <button id="searchButton">Buscar</button>
